# ADReSSo-feature-extraction-en

./: .gitignore  README.md  main.py  pyproject.toml
src/: acousticFeature.py  feature_extraction_pipeline.py  feature_selection_pipline.py  model_feature_pipeline.py  model_feature_pipline.py  model_feature_selection_pipline.py  transcription_pipeline.py  utils.py
src/config/: model.yaml  path.yaml
src/features/: acousticFeature.py  linguisticFeature.py
src/models/: featureSelection.py  modelsML.py
src/traditionalApproach/: evaluation.py  featureSelection.py  helperFn.py  modelsML.py  tuning.py
src/utils/: helperFn.py  io.py  metrics.py
