[project]
name = "adresso-feature-extration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "ideadensity>=0.5.1",
    "numpy>=2.4.3",
    "opensmile>=2.6.0",
    "pandas>=3.0.1",
    "praat-parselmouth>=0.4.7",
    "pyqt6<6.9",
    "scipy>=1.17.1",
    "setuptools<71.0.0",
    "spacy>=3.8.11",
    "textblob>=0.19.0",
    "textstat>=0.7.13",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
