[project]
name = "adresso-feature-extration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "en-core-web-sm",
    "ideadensity>=0.5.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "mrmr-selection>=0.2.8",
    "numpy>=2.4.3",
    "omegaconf>=2.3.0",
    "opensmile>=2.6.0",
    "pandas>=3.0.1",
    "praat-parselmouth>=0.4.7",
    "pyqt6<6.9",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "setuptools<71.0.0",
    "soundfile>=0.13.1",
    "spacy>=3.8.11",
    "tabulate>=0.10.0",
    "textblob>=0.19.0",
    "textstat>=0.7.13",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "xgboost>=3.2.0",
]
[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
]
[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
